--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
-    "validate": "^5.2.0"
+    "mongoose": "^8.17.0"
   }
 }
