--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "node build.js",
+    "start": "node dist/bundle.js",
     "dev": "tsx watch ./src/index.ts",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix"
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.0",
+    "esbuild": "^0.25.8",
     "eslint": "^9.32.0",
     "install": "^0.13.0",
     "npm": "^11.5.2",
